--- a/QAB_proj/Base.lproj/Main.storyboard
+++ b/QAB_proj/Base.lproj/Main.storyboard
@@ -327,12 +327,14 @@
                             <constraint firstItem="jxN-0J-bSi" firstAttribute="top" secondItem="eLM-am-juw" secondAttribute="top" id="9ed-Lk-SFO"/>
                             <constraint firstItem="jxN-0J-bSi" firstAttribute="leading" secondItem="eLM-am-juw" secondAttribute="leading" constant="20" id="Aag-Wb-LfZ"/>
                             <constraint firstItem="eLM-am-juw" firstAttribute="trailing" secondItem="lcx-vo-3gz" secondAttribute="trailing" constant="20" id="BVs-lv-wtJ"/>
+                            <constraint firstItem="83S-iv-teH" firstAttribute="top" secondItem="ns1-G6-KSi" secondAttribute="bottom" constant="40" id="Bis-BF-zQ2"/>
                             <constraint firstItem="T4N-gK-wcI" firstAttribute="top" secondItem="VVy-zn-upG" secondAttribute="bottom" constant="30" id="LYB-KK-4j6"/>
                             <constraint firstItem="oI3-0w-Vnp" firstAttribute="top" secondItem="TqU-9m-u7e" secondAttribute="bottom" constant="40" id="Ndl-60-l42"/>
                             <constraint firstItem="ns1-G6-KSi" firstAttribute="top" secondItem="5IA-6b-2Ii" secondAttribute="bottom" constant="30" id="Q7z-Vl-QSU"/>
                             <constraint firstItem="05X-pF-4hb" firstAttribute="top" secondItem="xRb-WQ-6X2" secondAttribute="bottom" constant="30" id="Sc2-Vv-wQw"/>
                             <constraint firstItem="TqU-9m-u7e" firstAttribute="top" secondItem="bJk-gY-VIO" secondAttribute="bottom" constant="30" id="Sm9-Mb-Bjc"/>
                             <constraint firstAttribute="trailing" secondItem="5IA-6b-2Ii" secondAttribute="trailing" constant="20" id="Va0-T0-Ehb"/>
+                            <constraint firstItem="VVy-zn-upG" firstAttribute="top" secondItem="83S-iv-teH" secondAttribute="bottom" constant="40" id="XzQ-eg-8PJ"/>
                             <constraint firstItem="lcx-vo-3gz" firstAttribute="top" secondItem="eLM-am-juw" secondAttribute="top" id="b4h-si-mSa"/>
                             <constraint firstItem="xRb-WQ-6X2" firstAttribute="leading" secondItem="eLM-am-juw" secondAttribute="leading" constant="20" id="fDb-Jr-KOz"/>
                             <constraint firstItem="eLM-am-juw" firstAttribute="trailing" secondItem="bJk-gY-VIO" secondAttribute="trailing" constant="20" id="fEK-gb-M34"/>
@@ -2100,7 +2102,7 @@
         <image name="menu" width="512" height="512"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="9gI-cX-UYV"/>
-        <segue reference="XEQ-b2-5mw"/>
+        <segue reference="pkg-70-U5L"/>
+        <segue reference="c0h-Up-W6w"/>
     </inferredMetricsTieBreakers>
 </document>
